Closed
Bug 1317511
Opened 8 years ago
Closed 8 years ago
Share captive portal state with the content process
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: valentin, Assigned: valentin)
References
Details
(Whiteboard: [necko-active])
Attachments
(2 files)
21.98 KB,
patch
|
bagder
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
22.13 KB,
patch
|
Details | Diff | Splinter Review |
No description provided.
Assignee | ||
Comment 1•8 years ago
|
||
MozReview-Commit-ID: 5FnM9DNDWwL
Attachment #8811297 -
Flags: review?(daniel)
Comment 2•8 years ago
|
||
Comment on attachment 8811297 [details] [diff] [review]
Share captive portal state with the content process
Review of attachment 8811297 [details] [diff] [review]:
-----------------------------------------------------------------
Just one question.
::: netwerk/base/CaptivePortalService.cpp
@@ +163,5 @@
>
> + if (XRE_GetProcessType() != GeckoProcessType_Default) {
> + // Doesn't do anything when called in the content process.
> + return NS_OK;
> + }
But do you still want the LOG() to happen when not doing anything? The same comment for RecheckCaptivePortal.
Attachment #8811297 -
Flags: review?(daniel) → review+
Assignee | ||
Comment 3•8 years ago
|
||
Theoretically no one should be calling Start, Stop in the content process.
RecheckCaptivePortal() might be implemented in a followup - in case we want content process events to trigger rechecks.
The logs will still useful in case we observe weird behaviour.
Rebasing on m-c and pushing to inbound...
Assignee | ||
Comment 4•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/1eedf8ccdc1ef3980b6097d89cb3d665bd4b8d81
Bug 1317511 - Share captive portal state with the content process r=bagder
Comment 5•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 7•8 years ago
|
||
Can you request uplift to aurora since we are also considering uplift for bug 989197? Thanks.
status-firefox52:
--- → ?
Flags: needinfo?(valentin.gosu)
Comment 8•8 years ago
|
||
Comment on attachment 8811297 [details] [diff] [review]
Share captive portal state with the content process
Approval Request Comment
[User impact if declined]: Can't uplift bug 989197 (see bug 989197 comment 141)
[Is this code covered by automated tests?]: No, but the frontend work in bug 989197 (which uses this) is covered.
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[Is the change risky?]: I don't think so, but :valentin can comment further.
[Why is the change risky/not risky?]: The patch exposes a state variable to the content process. A frontend feature that uses this has been in Nightly for a while and all appears to work fine.
[String changes made/needed]: -
Attachment #8811297 -
Flags: approval-mozilla-aurora?
Comment 10•8 years ago
|
||
Comment on attachment 8811297 [details] [diff] [review]
Share captive portal state with the content process
captive portal work for aurora52
Attachment #8811297 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
I'm hitting a conflict uplifting this to aurora, could you take a look?
Flags: needinfo?(valentin.gosu)
Assignee | ||
Comment 12•8 years ago
|
||
Assignee | ||
Comment 13•8 years ago
|
||
I fixed the merge conflicts. Didn't push to try, but it should build.
Flags: needinfo?(valentin.gosu)
Comment 14•8 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•