Bug 1317511 - [aurora] Share captive portal state with the content process r=bagder a=jcristau